[package]
name = "code_engine"
version = "0.1.0"
edition = "2021"
description = "Code analysis engine for metrics, performance, security, and semantic search"
authors = ["Singularity Team"]
license = "MIT"
repository = "https://github.com/singularity/singularity"
readme = "README.md"
keywords = ["code-analysis", "naming", "quality", "metrics", "patterns"]
categories = ["development-tools", "text-processing"]

[lib]
name = "code_engine"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]  # Both library and NIF

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Graph analysis
petgraph = { workspace = true }

# Text processing
regex = { workspace = true }

# Advanced analysis libraries
walkdir = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }
toml = { workspace = true }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# Time handling
chrono = { workspace = true, features = ["serde"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Memory stats for performance analysis
memory-stats = "1.0"

# Logging
tracing = { workspace = true }

# Array operations for vectors
ndarray = { workspace = true }

# Serialization
bincode = { workspace = true }

# Directory utilities
dirs = { workspace = true }

# Temporary directory for tests
tempfile = { workspace = true }

# No database dependencies - NIF receives data from Elixir

# Hashing
sha2 = { workspace = true }
seahash = "4.1"

# NIF support (optional - only when used from Elixir)
rustler = { workspace = true, optional = true }

# ML & Embeddings (optional)
candle-core = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }
candle-transformers = { version = "0.9.1", optional = true }
tokenizers = { version = "0.22.1", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.4.3", optional = true, features = ["tokio"] }
thiserror = { workspace = true }

# Full-text search
tantivy = { version = "0.25.0", optional = true }

# Internal SPARC crates
quality = { path = "../quality_engine", package = "quality_engine" }

# Parser dependencies - use parser_core library (shared types, no NIF conflicts)
# Individual language parsers are accessed via parser_engine NIF, not directly by code_engine
parser_core = { path = "../parser_engine/core" }  # Core parser library (no NIF, shared types)

# Missing dependencies (commented out - directories don't exist)
prompt = { path = "../prompt_engine", package = "prompt_engine" }
# linting_engine = { path = "../linting" }  # Does not exist - quality_lib doesn't have LintingEngine
# sparc_methodology = { path = "../methodology" }  # Does not exist

# NATS for context queries
async-nats = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = ["nif"]
nif = ["rustler"]  # Enable NIF support for Elixir integration
# Semantic embeddings with Candle transformers
semantic = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
advanced-search = ["tantivy"]
