[package]
name = "codeintelligence-server"
version = "0.1.0"
edition = "2021"
description = "Singularity Unified Server - Manages all services"

[[bin]]
name = "codeintelligence-server"
path = "src/main.rs"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-nats = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Additional dependencies
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
clap = { version = "4.4", features = ["derive"] }