[package]
name = "consolidated_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-nats = "0.35"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"