[package]
name = "rust-dependency-parser"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Parser for extracting dependencies from package files (package.json, Cargo.toml, mix.exs, etc.)"
license = "MIT"
repository = "https://github.com/your-org/singularity"
keywords = ["dependencies", "package", "parser", "npm", "cargo", "hex"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
