[package]
name = "knowledge"
version = "0.1.0"
edition = "2021"
description = "Knowledge management - local caching and knowledge storage"
license = "MIT"

[lib]
name = "knowledge"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]  # Both library and NIF

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Collections
ahash = "0.8"
dashmap = "5.5"

# NIF support (optional - only when used from Elixir)
rustler = { version = "0.34", optional = true }

# Logging
tracing = "0.1"

# Storage
redb = "2.1"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
nif = ["rustler"]  # Enable NIF support for Elixir integration
