[workspace]
members = [
    "database",
    "cache",
    "vectors",
    "templates",
    "knowledge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Singularity Team"]
license = "MIT"

[workspace.dependencies]
# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid"] }
deadpool-postgres = "0.14"
tokio-postgres = "0.7"

# Cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
moka = { version = "0.12", features = ["future"] }
redb = "2.1"

# Vectors
pgvector = "0.4"
qdrant-client = "1.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Utils
anyhow = "1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
