[package]
name = "tech-detector"
version = "1.0.0"
authors = ["mikkihugo"]
edition = "2021"
description = "Technology and Framework Detector - Multi-level detection with AI fallback"
homepage = "https://github.com/mikkihugo/claude-code-zen"
repository = "https://github.com/mikkihugo/claude-code-zen"
license = "MIT"
readme = "README.md"
keywords = ["detection", "framework", "technology", "ai", "analysis"]
categories = ["algorithms", "development-tools"]

[lib]
name = "tech_detector"
path = "src/lib.rs"

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
log = { workspace = true }

# Async
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# File operations
walkdir = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }

# Dependency parsing for config file analysis
rust-dependency-parser = { path = "../dependency-parser" }

# NATS client for AI provider calls
async-nats = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "ai_analysis_test"
path = "examples/ai_analysis_test.rs"

[features]
default = []
