[package]
name = "unified-server"
version = "0.1.0"
edition = "2021"
description = "Unified server for all Singularity services"

[[bin]]
name = "unified-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.33"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }