[package]
name = "unified-server"
version = "0.1.0"
edition = "2021"
description = "Unified server for all Singularity services"

[[bin]]
name = "unified-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Messaging
async-nats = "0.33"

# File system access
tokio-util = "0.7"
walkdir = "2.3"

# Internal libraries
dependency-parser = { path = "../dependency_parser" }
code_parsing_engine = { path = "../code_parsing_engine" }
semantic_embedding_engine = { path = "../semantic_embedding_engine" }
analysis_engine = { path = "../analysis_engine" }
tech_detection_engine = { path = "../tech_detection_engine" }
intelligent_namer = { path = "../intelligent_namer" }