[package]
name = "template-service"
version = "0.1.0"
edition = "2021"
description = "Global template service for sharing templates across all Singularity instances"

[[bin]]
name = "template-service"
path = "src/bin/main.rs"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# NATS for distributed messaging
async-nats = { workspace = true }

# Database for template storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Template processing
handlebars = "4.5"
tera = "1.19"

# Caching
moka = { version = "0.12", features = ["future"] }

# Configuration
config = "0.14"

# File system walking
walkdir = "2.4"